<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Share My Ride</string>
    <string name="app_description">De beste carpool app die er is!</string>

    <!-- Actions -->
    <string name="action_settings">Instellingen</string>
    <string name="action_logout">Uitloggen</string>
    <string name="action_edit">Aanpassen</string>
    <string name="action_add">Toevoegen</string>
    <string name="action_delete">Verwijderen</string>

    <!-- Components -->
    <string name="Plan">Plannen</string>
    <string name="Search">Zoeken</string>
    <string name="Trips">Ritten</string>
    <string name="Profile">Profiel</string>

    <!-- Login -->
    <string name="login">We posten niets op Facebook zonder toestemming.</string>
    <string name="btnLogin">Aanmelden</string>

    <!-- Common -->
    <string name="From">Van</string>
    <string name="To">Naar</string>
    <string name="Date">Datum</string>
    <string name="Time">Tijd</string>
    <string name="Repeat">Herhaal</string>
    <string name="Price">Prijs</string>
    <string name="Save">Opslaan</string>
    <string name="Searching">Zoeken</string>
    <string name="Status">Status</string>
    <string name="Travelers">Medereizigers:</string>

    <!-- Plan -->
    <string name="Plan_Title">Plan een volgende rit:</string>
    <string name="str_atv_places">Enter Place Here</string>

    <!-- Search -->
    <string name="Search_ShareFb">Deel op Facebook</string>
    <string name="Search_Title">Zoek om mee te rijden:</string>

    <!-- Trips -->
    <string name="Trip_MyRequests">Ritaanvragen</string>
    <string name="Trip_Requests">Ritverzoeken</string>
    <string name="Trip_SavedTrips">Mijn opgeslagen ritten</string>
    <string name="Trip_MyRequests_title">Rit:</string>
    <string name="Trip_NoTrips">Je hebt nog geen opgeslagen trips.</string>

    <!-- Profile -->
    <string name="title_activity_profile">Profiel</string>
    <string name="Profile_Reviews">Beoordelingen</string>
    <string name="Profile_Name">Naam</string>
    <string name="Profile_FirstName">Voornaam</string>
    <string name="Profile_UserName">Gebruikersnaam</string>
    <string name="Profile_Place">Plaats</string>
    <string name="Profile_Car">Type auto</string>
    <string name="Profile_Places">Aantal plaatsen</string>
    <string name="title_fragment_edit_profile">Profiel</string>
    <string name="Profile_NoReviews">Er zijn nog geen reviews.</string>
    <string name="Profile_other_title">Profiel:</string>
    <string name="Button_Review">Schrijf Review</string>
    <string name="genderMale">M</string>
    <string name="genderFemale">V</string>
    <string name="locationUnknown">Locatie onbekend</string>
    <string name="ageUnknown">Leeftijd onbekend.</string>
    <string name="carUnknown">Auto onbekend</string>
    <string name="places">&#160;plaatsen</string>
    <string name="placesShort">&#160;pl.)</string>

    <!--Adapter literal strings-->
    <string name="adapterTo">&#160;naar&#160;</string>
    <string name="adapterRepeat">Herhaald:&#160;</string>
    <string name="adapterCostFree">Kost: Gratis</string>
    <string name="adapterCostPay">Kost: €</string>
    <string name="adapterRequestTo">Aanvraag naar:&#160;</string>
    <string name="adapterRequestedTo">Verzoek naar:&#160;</string>
    <string name="adapterStatus">Status:&#160;</string>

    <!--Days-->
    <string name="day_mo">ma,&#160;</string>
    <string name="day_tu">di,&#160;</string>
    <string name="day_wed">woe,&#160;</string>
    <string name="day_th">don,&#160;</string>
    <string name="day_fr">vrij,&#160;</string>
    <string name="day_sa">za,&#160;</string>
    <string name="day_sun">zon,&#160;</string>
    <string name="never">Nooit</string>

    <!--Payment-->
    <string name="costFree">Geen bedrag opgegeven.</string>
    <string name="costPay">€</string>

    <!--Status-->
    <string name="statusNoAction">Nog niet geaccepteerd</string>
    <string name="statusAccepted">Geaccepteerd</string>
    <string name="statusDeclined">Geweigerd</string>

    <!-- Search Results -->
    <string name="title_activity_zoek">Zoekresultaten</string>
    <string name="no_search_results">Er zijn geen trips gevonden die voldoen.</string>

    <!-- Match -->
    <string name="Button_Match">Match</string>
    <string name="Button_Join">Ik wil meerijden!</string>

    <!-- Details Activity and fragments -->
    <string name="title_activity_details">Details</string>
    <string name="title_activity_other_profile">Profiel</string>
    <string name="Added_Message">Bijgevoegd bericht:</string>
    <string name="Status_Accepted">Geaccepteerd</string>
    <string name="Status_NotAccepted">Nog niet geaccepteerd</string>
    <string name="Status_Declined">Geweigerd</string>
    <string name="Answer_Message">Antwoord op bericht:</string>
    <string name="Button_Accept">Accepteer</string>
    <string name="Button_Decline">Weiger</string>
    <string name="Button_Send">Stuur</string>
    <string name="Title_Saved">Mijn rit:</string>
    <string name="Title_Request">Jouw aanvraag: </string>
    <string name="Title_Requested">Aangevraagd: </string>

    <!-- Dialog Review -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_review">Jouw mening:</string>
    <string name="dialog_userRating">Rate gebruiker:</string>

    <!-- Facebook login and admin -->
    <string name="app_id">551430101654024</string>

    <!-- Settings -->
    <string name="title_activity_settings">Instellingen</string>
    <string name="pref_language">Taal inhoud</string>
    <string name="pref_delete_profile">Verwijder profiel</string>
    <string name="pref_general">Algemeen</string>
    <string name="pref_advanced">Geavanceerd</string>
    <string name="pref_credits">Credits</string>

    <!-- API -->
    <!--<string name="Domain">http://188.226.154.228</string>-->
    <!--<string name="API">http://188.226.154.228/api/v1/</string>-->
    <!--<string name="API_Profile">http://188.226.154.228/api/v1/profile/</string>-->
    <!--<string name="API_Trips">http://188.226.154.228/api/v1/trips/</string>-->
    <!--<string name="API_Trips_Search">http://188.226.154.228/api/v1/trips/search/</string>-->
    <!--<string name="API_Trips_Requests">http://188.226.154.228/api/v1/trips?show=requests</string>-->
    <!--<string name="API_Trips_Requested">http://188.226.154.228/api/v1/trips?show=requestedandaccepted</string>-->
    <!--<string name="API_Trips_Accepted">http://188.226.154.228/api/v1/trips?show=accepted</string>-->

    <!--<string name="Domain">http://188.166.7.147</string>-->
    <!--<string name="API">http://188.166.7.147/api/v1/</string>-->
    <!--<string name="API_Profile">http://188.166.7.147/api/v1/profile/</string>-->
    <!--<string name="API_Trips">http://188.166.7.147/api/v1/trips/</string>-->
    <!--<string name="API_Trips_Search">http://188.166.7.147/api/v1/trips/search/</string>-->
    <!--<string name="API_Trips_Requests">http://188.166.7.147/api/v1/trips?show=requests</string>-->
    <!--<string name="API_Trips_Requested">http://188.166.7.147/api/v1/trips?show=requestedandaccepted</string>-->
    <!--<string name="API_Trips_Accepted">http://188.166.7.147/api/v1/trips?show=accepted</string>-->

    <string name="Domain">http://188.166.7.244</string>
    <string name="API">http://188.166.7.244/api/v1/</string>
    <string name="API_Profile">http://188.166.7.244/api/v1/profile/</string>
    <string name="API_Trips">http://188.166.7.244/api/v1/trips/</string>
    <string name="API_Trips_Search">http://188.166.7.244/api/v1/trips/search/</string>
    <string name="API_Trips_Requests">http://188.166.7.244/api/v1/trips?show=requests</string>
    <string name="API_Trips_Requested">http://188.166.7.244/api/v1/trips?show=requestedandaccepted</string>
    <string name="API_Trips_Accepted">http://188.166.7.244/api/v1/trips?show=accepted</string>

    <!-- Site -->
    <string name="Site">http://sharemyrideapp.me</string>
    <string name="Site_Icon">http://sharemyrideapp.me/img/logo.png</string>
    <string name="Site_Donate">http://sharemyrideapp.me/donate</string>

    <!-- Notifications -->
    <string name="requestNotification"> zou graag meerijden met jou</string>
    <string name="acceptedNotification">Je kan meerijden met </string>
    <string name="deniedNotification">heeft jouw aanvraag geweigerd.</string>
    <string name="reviewNotification">  heeft een review op je profiel geschreven</string>
    <string name="messageNotification"> heeft je een bericht gestuurd</string>
    <string name="wrongNotification">Er is iets misgelopen</string>
    <string name="loginSuccesNotification">Succesvol aangemeld</string>
    <string name="tripAddedNotification">Rit is toegevoegd</string>
    <string name="dbSavedNotification">Succesvol opgeslagen in database</string>
    <string name="dbEditedNotification">Succesvol aangepast in database</string>
    <string name="dbDeletedNotification">Succesvol verwijderd</string>
    <string name="messageSentNotification">Bericht verzonden</string>
    <string name="noMessageFilledIn">Vul een bericht in</string>
    <string name="nothingFilledIn">Vul alle verplichte velden in</string>
    <string name="placesNoNumber">Aantal plaatsen moet een getal zijn</string>

    <!--Dialogs-->
    <string name="dialogTitleDeleteRequest">Verwijderen aanvraag</string>
    <string name="dialogDeleteRequest">Ben je zeker dat je deze aanvraag wilt verwijderen?</string>
    <string name="dialogTitleDeleteTrip">Verwijderen rit</string>
    <string name="dialogDeleteTrip">Ben je zeker dat je deze rit wilt verwijderen?</string>
    <string name="dialogDeleteProfileTitle">Verwijderen profiel</string>
    <string name="dialogDeleteProfile">Ben je zeker dat je uw profiel wilt verwijderen?</string>
    <string name="dialogCancel">Annuleer</string>
    <string name="dialogTitleNoConnection">Geen internet verbinding</string>
    <string name="dialogNoConnection">Je hebt geen internet verbinding</string>
    <string name="dialogDonateTitle">Doneren</string>
    <string name="dialogDonate">Vind je deze app nuttig? Steun de ontwikkeling ervan door te doneren aan de ontwikkelaars.</string>
    <string name="dialogDonateButton">Doneer</string>
    <string name="dialogCreditsTitle">Met liefde gemaakt door:</string>
    <string name="dialogCreditsThanksTo">Speciale dank aan:</string>
    <string name="dialogCreditsThanksToGoogle">Google, places API</string>

    <!--Share-->
    <string name="shareCaption">De beste carpool app die er is.</string>
    <string name="shareFirst">Ik zoek een  rit van&#160;</string>
    <string name="shareSecond">&#160;naar&#160;</string>
    <string name="shareThird">&#160;op&#160;</string>
    <string name="shareFourth">&#160;om&#160;</string>

</resources>
