<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general">

        <ListPreference
            android:defaultValue="nl"
            android:entries="@array/languages"
            android:entryValues="@array/languageData"
            android:key="language"
            android:title="@string/pref_language"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_advanced">

    <Preference
        android:title="@string/pref_delete_profile"
        android:key="delete_profile"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Over">

        <Preference
            android:title="@string/pref_credits"
            android:key="credits"/>

        </PreferenceCategory>

</PreferenceScreen>