<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nmct.howest.be.rideshare.Fragments.SearchFragment"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Search_Title"
            android:id="@+id/txbZoeken"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFromSearch"
            android:layout_alignParentEnd="true"
            android:hint="@string/From"
            android:layout_below="@+id/txbZoeken"
            android:layout_toRightOf="@+id/imgIconSearchFrom"
            android:layout_toEndOf="@+id/imgIconSearchFrom"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtToSearch"
            android:layout_alignRight="@+id/txtFromSearch"
            android:layout_alignEnd="@+id/txtFromSearch"
            android:hint="@string/To"
            android:layout_below="@+id/txtFromSearch"
            android:layout_alignLeft="@+id/txtFromSearch"
            android:layout_alignStart="@+id/txtFromSearch"
            android:layout_marginTop="25dp" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtDateSearch"
            android:focusable="false"
            android:hint="@string/Date"
            android:layout_below="@+id/txtToSearch"
            android:layout_alignLeft="@+id/txtToSearch"
            android:layout_alignStart="@+id/txtToSearch"
            android:layout_marginTop="25dp" />

        <EditText
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/txtTimeSearch"
            android:focusable="false"
            android:layout_toEndOf="@+id/txtDateSearch"
            android:layout_toRightOf="@+id/txtDateSearch"
            android:hint="@string/Time"
            android:layout_alignTop="@+id/txtDateSearch" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search_ShareFb"
            android:id="@+id/chkShareOnFacebook"
            android:layout_below="@+id/txtDateSearch"
            android:layout_marginTop="22dp"
            android:checked="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/rideshare_text" />

        <Button
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:text="@string/Searching"
            android:id="@+id/btnSearch"
            android:layout_below="@+id/chkShareOnFacebook"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textColor="@color/rideshare_secondary"
            android:background="@drawable/button_selector"
            android:elevation="2dp"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgIconSearchFrom"
            android:layout_alignBottom="@+id/txtFromSearch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_place_grey600_36dp" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgIconSearchTo"
            android:layout_alignBottom="@+id/txtToSearch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_flag_grey600_36dp" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignBottom="@+id/txtDateSearch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_access_time_grey600_36dp" />
    </RelativeLayout>

</ScrollView>