<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nmct.howest.be.rideshare.Activities.Fragments.TripsFragment"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_MyRequests"
            android:id="@+id/txbRitAanvragen"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/lstRitAanvragen"
            android:layout_weight="1"
            android:fastScrollEnabled="true"
            android:layout_marginTop="10dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_Requests"
            android:id="@+id/txbRitVerzoeken"
            android:layout_marginTop="22dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/lstRitVerzoeken"
            android:layout_weight="1"
            android:fastScrollEnabled="true"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_SavedTrips"
            android:id="@+id/txbOpgeslagenRitten"
            android:layout_marginTop="22dp"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/lstOpgeslagenRitten"
            android:layout_marginTop="10dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_weight="1"
            android:fastScrollEnabled="true" />

    </LinearLayout>
    </ScrollView>

    <com.melnykov.fab.FloatingActionButton
        xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_button"
    android:layout_width="@dimen/round_button_diameter"
    android:layout_height="@dimen/round_button_diameter"
    android:layout_gravity="bottom|right"
    android:layout_marginBottom="@dimen/add_button_margin_bottom"
    android:layout_marginRight="@dimen/add_button_margin_right"
    android:src="@drawable/ic_action_add"
    fab:fab_colorNormal="@color/rideshare_primary"
    fab:fab_colorPressed="@color/rideshare_primary_dark"
    fab:fab_colorRipple="@color/rideshare_secondary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Trip_NoTrips"
        android:visibility="invisible"
        android:id="@+id/txbNoTrips"
        android:layout_gravity="center" />

</FrameLayout>