<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nmct.howest.be.rideshare.Activities.Fragments.RittenFragment"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_MyRequests"
            android:id="@+id/txbRitAanvragen"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lstRitAanvragen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txbRitAanvragen"
            android:layout_alignBottom="@+id/txbRitAanvragen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_Requests"
            android:id="@+id/txbRitVerzoeken"
            android:layout_below="@+id/lstRitAanvragen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lstRitVerzoeken"
            android:layout_below="@+id/txbRitVerzoeken"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/txbOpgeslagenRitten" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/Trip_SavedTrips"
            android:id="@+id/txbOpgeslagenRitten"
            android:layout_below="@+id/txbRitVerzoeken"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:autoText="false" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lstOpgeslagenRitten"
            android:layout_below="@+id/txbOpgeslagenRitten"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/txbOpgeslagenRitten" />
    </RelativeLayout>
</ScrollView>